--- a/client-web/rt-app/src/app/index.scss
+++ b/client-web/rt-app/src/app/index.scss
@@ -1,3 +1,13 @@
+// @import url('https://fonts.googleapis.com/css?family=Nunito|Petit+Formal+Script&display=swap');
+
 $color-primary: #333399;
 $color-secondary: #3399ff;
 $color-ternary: #3366cc;
+
+$color-border-light: #eee;
+$width-border-light: 2px;
+
+
+.cursive {
+  font-family: 'Petit Formal Script', cursive;
+}
