--- a/client-web/rt-app/src/app/components/PerformanceReviewItem/style.scss
+++ b/client-web/rt-app/src/app/components/PerformanceReviewItem/style.scss
@@ -6,22 +6,23 @@
   cursor: pointer;
 
   & + & {
-    border-top: 1px solid #aaa;
+    border-top: $width-border-light solid $color-border-light;
   }
 
   &.selected {
     color: $color-primary;
-    &::after{
-      content: ' ';
+    &::after {
+      content: " ";
       position: absolute;
-      top:1em;
-      right:-1em;
-      height:1em;
+      top: 0.5em;
+      right: -1.6em;
+      height: 2em;
       width: 1em;
       background-image: url("./Arrow-Right-2-icon.png");
       background-position: right;
       background-repeat: no-repeat;
       background-size: 1em;
+      background-color: white;
       opacity: 0.5;
     }
   }
