--- a/client-web/rt-app/src/app/containers/App/style.scss
+++ b/client-web/rt-app/src/app/containers/App/style.scss
@@ -1,8 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import "../../index.scss";
+
 html,
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Nunito', sans-serif !important;
 }
 .fly-center {
   position: absolute;
